refactor: 그룹채팅 도메인 MSA 구조로 전면 리팩토링 및 최적화
기존 모놀리식 구조의 채팅 관련 서비스를 MSA 원칙에 따라 수정했습니다.
ChatMessage 데이터를 MongoDB로 이관하여 데이터베이스를 분리했습니다.
또한 방장 위임 등 신규 비즈니스 로직을 추가하고 API 책임을 명확히 하여
코드 안정성과 유지보수성을 크게 향상시켰습니다.